crates/ohno_macros/src/enrich_err/snapshots/ohno_macros__enrich_err__tests__function_with_regular_string_async.snap
---
source: crates/ohno_macros/src/enrich_err/tests.rs
expression: format_tokens(result)
---
async fn test_function() -> Result<(), OhnoErrorType> {
    (async || { Ok(()) })()
        .await
        .map_err(|mut e| {
            let msg = "custom error message";
            ohno::Enrichable::add_enrichment(
                &mut e,
                ohno::EnrichmentEntry::new(msg, file!(), line!()),
            );
            e
        })
}
