crates/ohno_macros/src/enrich_err/snapshots/ohno_macros__enrich_err__tests__method_with_mut_self_ref_async.snap
---
source: crates/ohno_macros/src/enrich_err/tests.rs
expression: format_tokens(result)
---
async fn test_method(&mut self) -> Result<(), OhnoErrorType> {
    (async || { Ok(()) })()
        .await
        .map_err(|mut e| {
            let msg = "error in function test_method";
            ohno::Enrichable::add_enrichment(
                &mut e,
                ohno::EnrichmentEntry::new(msg, file!(), line!()),
            );
            e
        })
}
