crates/ohno_macros/src/enrich_err/snapshots/ohno_macros__enrich_err__tests__method_with_self_ref_formatting_self.snap
---
source: crates/ohno_macros/src/enrich_err/tests.rs
expression: format_tokens(result)
---
fn test_method(&self) -> Result<(), OhnoErrorType> {
    (|| { Ok(()) })()
        .map_err(|mut e| {
            let msg = format!("operation failed, id: {}", self.id);
            ohno::Enrichable::add_enrichment(
                &mut e,
                ohno::EnrichmentEntry::new(msg, file!(), line!()),
            );
            e
        })
}
