crates/ohno_macros/src/enrich_err/snapshots/ohno_macros__enrich_err__tests__the_body_runs_inside_a_closure.snap
---
source: crates/ohno_macros/src/enrich_err/mod.rs
expression: "rendered(quote!(\"failed\"),\nparse_quote!(fn load() -> Result<(), MyError> { Err(MyError::new()) }))"
---
fn load() -> Result<(), MyError> {
    let __ohno_result = (|| -> Result<(), MyError> { Err(MyError::new()) })();
    __ohno_result
        .map_err(|mut __ohno_error| {
            ::ohno::Enrichable::add_enrichment(
                &mut __ohno_error,
                ::ohno::EnrichmentEntry::new("failed", ::core::file!(), ::core::line!()),
            );
            __ohno_error
        })
}
